--- a/gymtech.css
+++ b/gymtech.css
@@ -752,16 +752,17 @@ form input:focus::placeholder{
 }
 #estruturaFotos{
     background-color:  rgb(56, 167, 111);
-    height: 360px;
+    height: 420px;
     width: 100vw;
     position: relative;
     top: 120px;
     text-align: center;
+
 }
 
 #galeriaImagens{
-    width: 70vw;
-    height: 10vh;
+    width: 90vw;
+    height: 50vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -769,8 +770,8 @@ form input:focus::placeholder{
 }
 
 #galeriaImagens img{
-    width: 30vw;
-    height: 20vh;
+    width: 15%;
+    height: 30%;
     object-fit: cover;
     padding: 10px;
     border-radius: 20px;
@@ -779,55 +780,60 @@ form input:focus::placeholder{
 }
 
 #galeriaImagens img:hover{
-    width: 35vw;
-    height: 20vh;
-   transition: 1s;
+
+    transition: 1s;
     opacity: 1;
 }
 
 #imagemGrande{
+    border: solid 1px red;
+    background-color: rgba(0, 0, 0, 0.5);
     display: none;
     position: absolute;
-    top: 100px;
-    left: 205px;
-    width: 70vw;
-    height: 50vh;
-    border-radius: 20px;
+    top: -200px;
+    left: 0px;
+    width: 2000px;
+    height: 2000px;
     background-image: url();
+    background-position: 240px  250px;
     background-repeat: no-repeat;
+    background-size: 65vw 50vh;
     object-fit: fill;
-    background-size: 70vw 50vh;
     transition: 1s;
 }
 
 .left{
     position: relative;
-    top: 200px;
-    left: -490px;
+    top: 460px;
+    left: -770px;
     font-size: 2.5em;
     opacity: 0.8;
-    color: rgb(27, 27, 27);
+    color: rgb(224, 222, 222);
     cursor: pointer;
 }
 
 .right{
     position: relative;
-    top: 200px;
-    left: 530px;
+    top: 460px;
+    left: 190px;
     font-size: 2.5em;
     opacity: 0.8;
-    color: rgb(27, 27, 27);
+    color: rgb(224, 222, 222);
     cursor: pointer;
 }
 
 .close{
     position: relative;
-    top: -50px;
-    left: 480px;
+    top: 170px;
+    left: 180px;
     font-size: 2.5em;
     opacity: 0.8;
-    color: rgb(27, 27, 27);
+    color: rgb(224, 222, 222);
     cursor: pointer;
+}
+
+#nossaEstrutura{
+    overflow: visible;
 }
     /* ************* Media Query ************ */
 
@@ -837,6 +843,8 @@ form input:focus::placeholder{
        body{
            background-color: royalblue;
            overflow-x: hidden;
+           max-height: 890px;
+           min-height: 570px;
        }
 
        #picture{
@@ -854,7 +862,9 @@ form input:focus::placeholder{
         
     }
 
-    /* sessaoLpo{ Lpo */
+    /* sessaoLpo Lpo */
+
+    
 
     #imagemLpo{
         height: 75vh;
@@ -1738,6 +1748,7 @@ form input:focus::placeholder{
 
 
      }
+    
      
      @media (max-height:900px){
 
@@ -1930,4 +1941,5 @@ form input:focus::placeholder{
             margin-top: 8px;
         }
 
-     }
+     } 
+ 
