--- a/gymtech.css
+++ b/gymtech.css
@@ -16,7 +16,6 @@ body{
         /* ********** inicio cabeçalho  ********** */
 
 #cabecalho{
-  
     width: 100vw;
     height: 8vh;
     position: fixed;
@@ -52,7 +51,7 @@ body{
 }
 
 #navLateral div a:hover{
-    background-color:rgba(56, 167, 111,0.2);;
+    background-color:rgba(56, 167, 111,0.2);
     border: solid 2px rgb(56, 167, 111);
     color: rgb(56, 167, 111);
 
@@ -277,7 +276,7 @@ figure iframe{
 #sessaoLpo{
     background-color: rgba(0, 0, 0, 0.9);
     width: 100vw;
-    height: 75vh;
+    height: 493.5px;
     display: flex;
 }
 
@@ -304,7 +303,7 @@ figure iframe{
 
 #imagemLpo{
     width: 50vw;
-    height: 100vh;
+    height: 100%;
     background-image: url(../onlineGym/imagens/rm1.jpg);
     background-size:720px 493px;
     background-repeat: no-repeat;
@@ -458,7 +457,7 @@ figure iframe{
 
 #RmCenter{
     width: 100vw;
-    height: 90vh;
+    height: 620px;
     border: solid  1px rgba(0, 0, 0, 0.1);
     background-color: rgba(0, 0, 0, 0.9);
     background-image: url(../onlineGym/imagens/local.png);
@@ -843,8 +842,9 @@ form input:focus::placeholder{
        body{
            background-color: royalblue;
            overflow-x: hidden;
-           max-height: 890px;
+           /*max-height: 890px;
            min-height: 570px;
+           */
            
        }
 
@@ -868,7 +868,7 @@ form input:focus::placeholder{
     
 
     #imagemLpo{
-        height: 75vh;
+        height: 100%;
         background-image: url(../onlineGym/imagens/rm1.jpg);
         background-size:720px 493px;
         background-repeat: no-repeat;
@@ -1240,7 +1240,7 @@ form input:focus::placeholder{
 
         #imagemLpo{
             width: 50vw;
-            height: 100vh;
+            height: 100%;
             background-image: url(../onlineGym/imagens/rm1.jpg);
             background-size:720px 545.5px;
             background-repeat: no-repeat;
@@ -1346,12 +1346,12 @@ form input:focus::placeholder{
         }
 
         #sessaoLpo{
-            height: 75vh;
+            height: 493px;
         }
 
         #imagemLpo{
             width: 50vw;
-            height: 100vh;
+            height: 100%;
             background-image: url(../onlineGym/imagens/rm1.jpg);
             background-size:720px 800px;
             background-repeat: no-repeat;
@@ -1540,6 +1540,32 @@ form input:focus::placeholder{
         }
         
      }
+
+     /****** media 450px *******/
+     @media (max-width: 450px){
+
+        #Rose{
+           
+            background-position:-120px 0px;   
+            
+        }
+
+        #RmCenter{
+            height: 720px;
+            background-size: 520px 1200px;
+        }
+
+        #nossoEspaco{
+            width: 60vw;
+            height: 80%;
+            background-color: rgba(0, 0, 0, 0.3);
+            text-align: center;
+            margin-top: 40px;
+            padding: 20px;
+            border-radius: 20px;
+        }
+     }
+
 
       /* ******* Media 400px ******* */
 
@@ -1750,8 +1776,8 @@ form input:focus::placeholder{
 
      }
     
-     
-     @media (max-height:900px){
+     /*
+     @media (max-height:920px){
 
 
 
@@ -1790,6 +1816,7 @@ form input:focus::placeholder{
             top: 60px;
         }        
      }
+     
 
      @media (max-height:850px){
         #sessaoLpo{
@@ -1943,4 +1970,6 @@ form input:focus::placeholder{
         }
 
      } 
+
+     */
  
