--- a/gymtech.css
+++ b/gymtech.css
@@ -748,12 +748,14 @@ form input:focus::placeholder{
 
 #nossaEstrutura {
     overflow-y: hidden;
+   background-color:  rgb(190, 189, 189);
 }
 #nossaEstrutura footer{
     position: absolute;
     top: 618px;
 }
 #estruturaFotos{
+    visibility: visible;
     background-color:  rgb(56, 167, 111);
     height: 420px;
     width: 100vw;
@@ -764,8 +766,8 @@ form input:focus::placeholder{
 }
 
 #galeriaImagens{
-    width: 90vw;
-    height: 50vh;
+    width: 80%;
+    height: 80%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -840,7 +842,7 @@ form input:focus::placeholder{
     /* ******* Media 1300px ******* */
 
     @media (max-width: 1365px){
-       body{
+       #nossaEstrutura,body{
            background-color: royalblue;
            overflow-x: hidden;
            /*max-height: 890px;
@@ -924,16 +926,86 @@ form input:focus::placeholder{
         border-radius: 20px;
     }
 
-        footer{
+    footer{
             z-index: 1;
         }
+
+        #estruturaFotos{
+            height: 75%;
+        }
+
+        #estruturaFotos{
+            position: relative;
+            top: 150px;
+        }
+
+        #galeriaImagens{
+            margin-top: 60px;
+        }
+        
+        #galeriaImagens img{
+            width: 25%;
+            height: 15%;
+            object-fit: cover;
+            padding: 10px;
+            border-radius: 20px;
+            opacity: 0.5;
+            cursor: pointer;
+        }
+
+        #imagemGrande{
+            background-color: rgba(0, 0, 0, 0.5);
+            display:none;
+            position: absolute;
+            top: -200px;
+            left: 0px;
+            width: 100%;
+            height: 100%;
+            background-position: 54%  14%;
+            background-repeat: no-repeat;
+            background-size: 60% 25%;
+            object-fit:fill;
+            transition: 1s;
+        }
+
+        .left{
+            position: relative;
+            top: 460px;
+            left: -33.5%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
+        
+        .right{
+            position: relative;
+            top: 460px;
+            left: 40%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
+        
+        .close{
+            position: relative;
+            top: 5%;
+            left: 37%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
+
+    
        
     }
 
     /* ******* Media 1200px ******* */
 
     @media (max-width: 1200px){
-        body{
+        #nossaEstrutura,body{
             background-color: green;
         }
 
@@ -980,11 +1052,19 @@ form input:focus::placeholder{
             width: 100vw;
             height: 8vh;
         }
+
+        #imagemGrande{
+            background-position: 54%  18%;
+            background-repeat: no-repeat;
+            background-size: 60% 25%;
+            object-fit:fill;
+            transition: 1s;
+        }
     }       
      /* ******* Media 1100px ******* */
 
      @media (max-width: 1100px){
-        body{
+        #nossaEstrutura,body{
             background-color: yellow;
         }
 
@@ -1040,12 +1120,16 @@ form input:focus::placeholder{
             background-position-x: -140px;
         }
 
+        #imagemGrande{
+            background-position: 54%  20%;
+        }
+
      }
 
      /* ******* Media 1000px ******* */
 
      @media (max-width: 1000px){
-        body{
+        #nossaEstrutura,body{
             background-color: orange;
         }
 
@@ -1153,6 +1237,10 @@ form input:focus::placeholder{
             background-size: 1100px 760px;
             background-position-x:-60px;
         }
+
+        #imagemGrande{
+            background-position: 54%  24%;
+        }
         
         
      }
@@ -1160,7 +1248,7 @@ form input:focus::placeholder{
      /* ******* Media 840px ******* */
 
      @media (max-width: 840px){
-        body{
+        #nossaEstrutura,body{
             background-color:purple;
         }
 
@@ -1204,7 +1292,11 @@ form input:focus::placeholder{
         #RmCenter{
             background-size: 900px 760px;
             background-position-x:-70px;
-        }       
+        }    
+        
+        #imagemGrande{
+            background-position: 54%  30%;
+        }
      }
 
      
@@ -1212,8 +1304,14 @@ form input:focus::placeholder{
      /* ******* Media 760px ******* */
 
      @media (max-width: 760px){
-        body{
+       body{
             background-color:rgb(128, 0, 49);
+            
+        }
+        #nossaEstrutura{
+            background-color:rgb(128, 0, 49);
+            overflow-y: scroll;
+            height: 1050px;
         }
 
         #picture{
@@ -1310,14 +1408,71 @@ form input:focus::placeholder{
         footer{
             margin-top: 400px;
         }
+
+        #estruturaFotos{
+            height: 75%;
+        }
+
+        #estruturaFotos{
+            position: relative;
+            top: 150px;
+        }
+
+        #galeriaImagens{
+            margin-top: 60px;
+        }
         
+        #galeriaImagens img{
+            width: 25%;
+            height: 15%;
+            object-fit: cover;
+            padding: 10px;
+            border-radius: 20px;
+            opacity: 0.5;
+            cursor: pointer;
+        }
+
+        #imagemGrande{
+            background-position: 54%  50%;
+            background-size: 75% 30%;
+        }
+
+        .left{
+            position: relative;
+            top: 460px;
+            left: -38.5%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
+        
+        .right{
+            position: relative;
+            top: 460px;
+            left: 44%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
+        
+        .close{
+            position: relative;
+            top: 15%;
+            left: 37%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
 
      }
 
       /* ******* Media 680px ******* */
 
       @media (max-width: 680px){
-        body{
+        #nossaEstrutura,body{
             background-color:rgb(38, 0, 128);
         }
 
@@ -1382,6 +1537,52 @@ form input:focus::placeholder{
         #Mateus .card{
             height: 32vh;
         }
+
+        #imagemGrande{
+            background-color: rgba(0, 0, 0, 0.5);
+            display:none;
+            position: absolute;
+            top: -200px;
+            left: 0px;
+            width: 100%;
+            height: 100%;
+            background-image: url();
+            background-position: 50%  60%;
+            background-repeat: no-repeat;
+            background-size: 70% 40%;
+            object-fit:fill;
+            transition: 1s;
+        }
+
+        .left{
+            position: relative;
+            top: 460px;
+            left: -33.5%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
+        
+        .right{
+            position: relative;
+            top: 460px;
+            left: 40%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
+        
+        .close{
+            position: relative;
+            top: 170px;
+            left: 34%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
         
 
      }
@@ -1389,7 +1590,7 @@ form input:focus::placeholder{
       /* ******* Media 600px ******* */
 
       @media (max-width: 600px){
-        body{
+        #nossaEstrutura,body{
             background-color:rgb(7, 160, 180);
            
         }
@@ -1454,12 +1655,13 @@ form input:focus::placeholder{
             
         }
 
+
      }
 
       /* ******* Media 500px ******* */
 
       @media (max-width: 500px){
-        body{
+        #nossaEstrutura,body{
             background-color:rgb(180, 7, 7);
         }
 
@@ -1539,6 +1741,8 @@ form input:focus::placeholder{
             width:80vw;
             margin-top: 50px;
         }
+
+        
         
      }
 
@@ -1571,7 +1775,7 @@ form input:focus::placeholder{
       /* ******* Media 400px ******* */
 
       @media (max-width: 400px){
-        body{
+        #nossaEstrutura,body{
             background-color:rgb(164, 173, 110);
         }
 
