--- a/gymtech.css
+++ b/gymtech.css
@@ -639,6 +639,7 @@ footer p{
     width: 100vw;
     position: relative;
     top: 120px;
+    display: flex;
    
 }
 
@@ -689,17 +690,19 @@ footer p{
 }
 
 #contato{
+    border: solid 1px rgb(172, 172, 172,0.4) ;
     background-color: rgb(172, 172, 172,0.4);
-    width: 40vw;
-    height: 61vh;
-    position: relative;
-    top: -270px;
-    left: 700px;
-    padding-top: 20px;
+    width: 71%;
+    height: 80%;
+    min-height: 430px;
+    margin-top: -30px;
+    margin-left: 80px;
     border-radius: 20px;
     box-shadow: 10px 30px 30px rgb(0,0,0);
 }
-
+#contato form{
+    margin-top: 60px;
+}
 #contato h1{
     font-size: 2em;
     font-weight: 100;
@@ -842,7 +845,7 @@ form input:focus::placeholder{
     /* ******* Media 1300px ******* */
 
     @media (max-width: 1365px){
-       #nossaEstrutura,body{
+       #contatoRm,#nossaEstrutura,body{
            background-color: royalblue;
            overflow-x: hidden;
            /*max-height: 890px;
@@ -998,6 +1001,15 @@ form input:focus::placeholder{
             cursor: pointer;
         }
 
+        #whatsApp{
+            width: 100px;
+            font-size: 3.5em;
+            color: rgb(56, 167, 111);
+            position:fixed;
+            left: 0px;
+            top: 85%;
+        }
+
     
        
     }
@@ -1005,7 +1017,7 @@ form input:focus::placeholder{
     /* ******* Media 1200px ******* */
 
     @media (max-width: 1200px){
-        #nossaEstrutura,body{
+        #contatoRm,#nossaEstrutura,body{
             background-color: green;
         }
 
@@ -1060,11 +1072,22 @@ form input:focus::placeholder{
             object-fit:fill;
             transition: 1s;
         }
+
+        #contato{
+            min-width: 340px;
+            max-width: 90%;
+        }
+
+        #contato form{
+            margin-top: 60px;
+            margin-left: -40px;
+        }
+
     }       
      /* ******* Media 1100px ******* */
 
      @media (max-width: 1100px){
-        #nossaEstrutura,body{
+        #contatoRm,#nossaEstrutura,body{
             background-color: yellow;
         }
 
@@ -1124,13 +1147,20 @@ form input:focus::placeholder{
             background-position: 54%  20%;
         }
 
+        #contato{
+            min-width: 340px;
+            max-width: 90%;
+            margin-left: 10%;
+        }
+
      }
 
      /* ******* Media 1000px ******* */
 
      @media (max-width: 1000px){
-        #nossaEstrutura,body{
+        #contatoRm,#nossaEstrutura,body{
             background-color: orange;
+            overflow-y: scroll;
         }
 
         #picture{
@@ -1241,14 +1271,50 @@ form input:focus::placeholder{
         #imagemGrande{
             background-position: 54%  24%;
         }
-        
+
+        /* ******************* contato **************/
+        #cabecalho{
+            z-index: 99;
+        }
+        #contatoRm{
+            overflow: visible;
+        }
+        #backgroundContato{
+            border: solid 1px rgba(0, 0, 0, 0.1);
+            height:100%;
+            width: 520px;
+            position: relative;
+            top:0px;
+            left: 25%;
+            display: block;
+            z-index: 98;
+           
+        }
+
+        #backgroundContato div{
+           
+            margin:80px auto;
+            text-align: center;
+        }
+
+        #backgroundContato iframe{
+            display: none;
+        }
+
+        #contato{
+            margin: 0 auto;
+        }
+
+        form input{
+            width: 60%;
+        }
         
      }
 
      /* ******* Media 840px ******* */
 
      @media (max-width: 840px){
-        #nossaEstrutura,body{
+        #contatoRm,#nossaEstrutura,body{
             background-color:purple;
         }
 
@@ -1297,6 +1363,16 @@ form input:focus::placeholder{
         #imagemGrande{
             background-position: 54%  30%;
         }
+
+        #backgroundContato{
+            left: 18%;           
+        }
+
+        form input{
+            width: 60%;
+        }
+
+    
      }
 
      
@@ -1304,7 +1380,7 @@ form input:focus::placeholder{
      /* ******* Media 760px ******* */
 
      @media (max-width: 760px){
-       body{
+        #contatoRm,body{
             background-color:rgb(128, 0, 49);
             
         }
@@ -1466,13 +1542,28 @@ form input:focus::placeholder{
             color: rgb(224, 222, 222);
             cursor: pointer;
         }
+        #backgroundContato{
+            left: 14%;
+            height: 1000px;
+                       
+        }
+
+        form input{
+            width: 60%;
+        }
+
+        #footerContato{
+            margin-top: -50px;
+            z-index: 100;
+            position: absolute;
+        }
 
      }
 
       /* ******* Media 680px ******* */
 
       @media (max-width: 680px){
-        #nossaEstrutura,body{
+        #contatoRm,#nossaEstrutura,body{
             background-color:rgb(38, 0, 128);
         }
 
@@ -1583,6 +1674,11 @@ form input:focus::placeholder{
             color: rgb(224, 222, 222);
             cursor: pointer;
         }
+
+        #backgroundContato{
+            width: 100%;
+            left: 0;
+        }
         
 
      }
@@ -1590,7 +1686,7 @@ form input:focus::placeholder{
       /* ******* Media 600px ******* */
 
       @media (max-width: 600px){
-        #nossaEstrutura,body{
+        #contatoRm,#nossaEstrutura,body{
             background-color:rgb(7, 160, 180);
            
         }
@@ -1655,7 +1751,7 @@ form input:focus::placeholder{
             
         }
 
-
+    
      }
 
       /* ******* Media 500px ******* */
