--- a/gymtech.css
+++ b/gymtech.css
@@ -349,6 +349,7 @@ figure iframe{
     opacity: 0.7;   
     box-shadow: 10px 20px 50px 30px rgba(0, 0, 0, 0.9);   
     background-position: -50px 0px; 
+    cursor: pointer;
 }
 
 #Mateus .card{
@@ -408,6 +409,7 @@ figure iframe{
     opacity: 0.7; 
     box-shadow: 10px 20px 50px 30px rgba(0, 0, 0, 0.9); 
     background-position:-50px -25px;   
+    cursor: pointer;
     
 }
 
@@ -1563,8 +1565,12 @@ form input:focus::placeholder{
       /* ******* Media 680px ******* */
 
       @media (max-width: 680px){
-        #contatoRm,#nossaEstrutura,body{
+      #nossaEstrutura,body{
             background-color:rgb(38, 0, 128);
+        }
+
+        #contatoRm{
+            background-color:rgb(56, 167, 111) ;
         }
 
 
