--- a/gymtech.css
+++ b/gymtech.css
@@ -634,6 +634,176 @@ footer p{
     align-self: center;
 }
 
+/************* pagina Mateus ************** */
+
+    #bodyMateus{
+        background-color:rgb(190, 189, 189);
+        overflow:scroll;
+    }
+
+    #topoMateus{
+        background-color:rgb(56, 167, 111);
+        height: 220px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    #topoMateusLeft{
+        width: 33%;
+        text-align: center;
+    }
+
+    #topoMateusLeft h1{
+        width: 40%;
+        font-size: 2em;
+        text-transform: uppercase;
+        font-weight: 500;
+        margin: 50px auto;
+    }
+
+    .esquerda{
+        text-align: left;
+    }
+
+    #topoMateusCenter{
+        width: 33%;
+    }
+
+    #topoMateusCenter img{
+        border: solid 6px rgb(190, 189, 189) ;
+        width: 100%;
+        height: 100%;
+        border-radius:150px 150px;
+        margin-top: 120px;
+        margin-left:-5px;
+    }
+
+    #topoMateusRight{
+        width: 33%;
+        text-align: center;
+    }
+
+    #topoMateusRight h1{
+        width: 80%;
+        font-size: 2em;
+        text-transform: uppercase;
+        font-weight: 500;
+        margin: 50px auto;
+    }
+
+    #biografiaMateus{
+        border: solid 1px red;
+        margin: 130px auto;
+        width: 80%;
+        height: 420px;
+    }
+
+    #curiosidadesSobre{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+    }
+
+    #curiosidadesSobre div{
+        width: 33%;
+        height: 20%;
+    }
+
+
+/****** Galeria de fotos *******/
+
+#nossaEstrutura {
+    overflow-y: hidden;
+   background-color:  rgb(190, 189, 189);
+}
+#nossaEstrutura footer{
+    position: absolute;
+    top: 618px;
+}
+#estruturaFotos{
+    visibility: visible;
+    background-color:  rgb(56, 167, 111);
+    height: 420px;
+    width: 100vw;
+    position: relative;
+    top: 120px;
+    text-align: center;
+
+}
+
+#galeriaImagens{
+    width: 80%;
+    height: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+
+#galeriaImagens img{
+    width: 15%;
+    height: 30%;
+    object-fit: cover;
+    padding: 10px;
+    border-radius: 20px;
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+#galeriaImagens img:hover{
+
+    box-shadow: 15px 30px 20px rgba(0, 0, 0, 0.9);
+    transition: 1s;
+    opacity: 1;
+}
+
+#imagemGrande{
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    position: absolute;
+    top: -200px;
+    left: 0px;
+    width: 2000px;
+    height: 2000px;
+    background-image: url();
+    background-position: 240px  250px;
+    background-repeat: no-repeat;
+    background-size: 45% 18%;
+    object-fit:fill;
+    transition: 1s;
+}
+
+.left{
+    position: relative;
+    top: 460px;
+    left: -770px;
+    font-size: 2.5em;
+    opacity: 0.8;
+    color: rgb(224, 222, 222);
+    cursor: pointer;
+}
+
+.right{
+    position: relative;
+    top: 460px;
+    left: 190px;
+    font-size: 2.5em;
+    opacity: 0.8;
+    color: rgb(224, 222, 222);
+    cursor: pointer;
+}
+
+.close{
+    position: relative;
+    top: 170px;
+    left: 180px;
+    font-size: 2.5em;
+    opacity: 0.8;
+    color: rgb(224, 222, 222);
+    cursor: pointer;
+}
+
 /****** pagina de contato **********/
 #backgroundContato{
     background-color:  rgb(56, 167, 111);
@@ -747,99 +917,6 @@ form input::placeholder{
 form input:focus::placeholder{
     transition: 1s;
     color: rgb(80, 241, 161);
-}
-
-/****** Galeria de fotos *******/
-
-#nossaEstrutura {
-    overflow-y: hidden;
-   background-color:  rgb(190, 189, 189);
-}
-#nossaEstrutura footer{
-    position: absolute;
-    top: 618px;
-}
-#estruturaFotos{
-    visibility: visible;
-    background-color:  rgb(56, 167, 111);
-    height: 420px;
-    width: 100vw;
-    position: relative;
-    top: 120px;
-    text-align: center;
-
-}
-
-#galeriaImagens{
-    width: 80%;
-    height: 80%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 0 auto;
-}
-
-#galeriaImagens img{
-    width: 15%;
-    height: 30%;
-    object-fit: cover;
-    padding: 10px;
-    border-radius: 20px;
-    opacity: 0.5;
-    cursor: pointer;
-}
-
-#galeriaImagens img:hover{
-
-    box-shadow: 15px 30px 20px rgba(0, 0, 0, 0.9);
-    transition: 1s;
-    opacity: 1;
-}
-
-#imagemGrande{
-    background-color: rgba(0, 0, 0, 0.5);
-    display: none;
-    position: absolute;
-    top: -200px;
-    left: 0px;
-    width: 2000px;
-    height: 2000px;
-    background-image: url();
-    background-position: 240px  250px;
-    background-repeat: no-repeat;
-    background-size: 45% 18%;
-    object-fit:fill;
-    transition: 1s;
-}
-
-.left{
-    position: relative;
-    top: 460px;
-    left: -770px;
-    font-size: 2.5em;
-    opacity: 0.8;
-    color: rgb(224, 222, 222);
-    cursor: pointer;
-}
-
-.right{
-    position: relative;
-    top: 460px;
-    left: 190px;
-    font-size: 2.5em;
-    opacity: 0.8;
-    color: rgb(224, 222, 222);
-    cursor: pointer;
-}
-
-.close{
-    position: relative;
-    top: 170px;
-    left: 180px;
-    font-size: 2.5em;
-    opacity: 0.8;
-    color: rgb(224, 222, 222);
-    cursor: pointer;
 }
 
     /* ************* Media Query ************ */
