--- a/gymtech.css
+++ b/gymtech.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    font-family: sans-serif;
+    font-family:sans-serif;
     height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
@@ -639,7 +639,6 @@ footer p{
     #bodyMateus{
         background-color:rgb(190, 189, 189);
         overflow-y: scroll;
-        overflow-x: scroll;
     }
 
     #topoMateus{
@@ -649,6 +648,17 @@ footer p{
         display: flex;
         justify-content: space-between;
         z-index: 1;
+        align-items: center;
+    }
+
+    #topoMateus h1{
+        font-style: italic;
+        color: rgb(0,0,0,0.6);
+    }
+
+    .movimento{
+       font-size: 0.5em;
+       color:rgb(0,0,0,0.6);
     }
 
     #topoMateusLeft{
@@ -661,7 +671,7 @@ footer p{
         font-size: 2em;
         text-transform: uppercase;
         font-weight: 500;
-        margin: 100px auto;
+        margin: 0px auto;
     }
 
     .esquerda{
@@ -672,13 +682,13 @@ footer p{
         width: 33%;
     }
 
+
     #topoMateusCenter img{
         border: solid 6px rgb(190, 189, 189) ;
         width: 100%;
         height: 110%;
         border-radius:150px 150px;
-        margin-top: 100px;
-        margin-left:-5px;
+        margin-top: 300px;
     }
 
     #topoMateusRight{
@@ -691,7 +701,8 @@ footer p{
         font-size: 2em;
         text-transform: uppercase;
         font-weight: 500;
-        margin: 100px auto;
+        margin:0px auto;
+        margin-top: 10px;
     }
 
     #biografiaMateus{
@@ -713,7 +724,7 @@ footer p{
     }
 
     #biografiaMateus p{
-        color: rgb(0,0,0);
+        color:rgb(0,0,0,0.6);
         font-weight: 500;
         padding: 10px;
         font-size: 1.2em;
@@ -765,6 +776,7 @@ footer p{
         text-transform: uppercase;
         letter-spacing: -1px;
         font-style: italic;
+        color:rgb(0,0,0,0.6);
 
     }
 
@@ -1380,7 +1392,7 @@ form input:focus::placeholder{
      /* ******* Media 1100px ******* */
 
      @media (max-width: 1100px){
-        #contatoRm,#nossaEstrutura,body{
+        #bodyMateus,#contatoRm,#nossaEstrutura,body{
             background-color: yellow;
         }
 
@@ -1446,12 +1458,20 @@ form input:focus::placeholder{
             margin-left: 10%;
         }
 
+        #topoMateusCenter img{
+            min-width: 380px;
+            height: 110%;
+            border-radius:150px 150px;
+            margin-top: 300px;
+            margin-left: -5%;
+        }
+
      }
 
      /* ******* Media 1000px ******* */
 
      @media (max-width: 1000px){
-        #contatoRm,#nossaEstrutura,body{
+        #bodyMateus,#contatoRm,#nossaEstrutura,body{
             background-color: orange;
             overflow-y: scroll;
         }
@@ -1601,13 +1621,21 @@ form input:focus::placeholder{
         form input{
             width: 60%;
         }
+
+        #topoMateusCenter img{
+            min-width: 380px;
+            height: 110%;
+            border-radius:150px 150px;
+            margin-top: 300px;
+            margin-left: -10%;
+        }
         
      }
 
      /* ******* Media 840px ******* */
 
      @media (max-width: 840px){
-        #contatoRm,#nossaEstrutura,body{
+        #bodyMateus,#contatoRm,#nossaEstrutura,body{
             background-color:purple;
         }
 
@@ -1665,6 +1693,14 @@ form input:focus::placeholder{
             width: 60%;
         }
 
+        #topoMateusCenter img{
+            min-width: 350px;
+            height: 110%;
+            border-radius:150px 150px;
+            margin-top: 300px;
+            margin-left: -10%;
+        }
+
     
      }
 
@@ -1673,7 +1709,7 @@ form input:focus::placeholder{
      /* ******* Media 760px ******* */
 
      @media (max-width: 760px){
-        #contatoRm,body{
+       #bodyMateus,#contatoRm,body{
             background-color:rgb(128, 0, 49);
             
         }
@@ -1851,12 +1887,32 @@ form input:focus::placeholder{
             position: absolute;
         }
 
+        #topoMateusCenter img{
+            min-width: 350px;
+            height: 110%;
+            border-radius:150px 150px;
+            margin-top: 300px;
+            margin-left: -10%;
+        }
+
+        #topoMateusLeft{
+            width: 30%;
+            margin-left: -40px;
+        }
+
+        #topoMateusRight{
+            
+            width: 30%;
+            margin-left: 30px;
+        }
+
+
      }
 
       /* ******* Media 680px ******* */
 
       @media (max-width: 680px){
-      #nossaEstrutura,body{
+      #bodyMateus,#nossaEstrutura,body{
             background-color:rgb(38, 0, 128);
         }
 
@@ -1976,6 +2032,25 @@ form input:focus::placeholder{
             width: 100%;
             left: 0;
         }
+
+        #topoMateusCenter img{
+            min-width: 330px;
+            height: 110%;
+            border-radius:150px 150px;
+            margin-top: 300px;
+            margin-left: -10%;
+        }
+
+        #topoMateusLeft{
+            width: 25%;
+            margin-left: -40px;
+        }
+
+        #topoMateusRight{
+            
+            width: 30%;
+            margin-left: 30px;
+        }
         
 
      }
@@ -1983,7 +2058,7 @@ form input:focus::placeholder{
       /* ******* Media 600px ******* */
 
       @media (max-width: 600px){
-        #contatoRm,#nossaEstrutura,body{
+        #bodyMateus,#contatoRm,#nossaEstrutura,body{
             background-color:rgb(7, 160, 180);
            
         }
@@ -2048,13 +2123,35 @@ form input:focus::placeholder{
             
         }
 
+        #topoMateusCenter img{
+            min-width: 330px;
+            height: 110%;
+            border-radius:150px 150px;
+            margin-top: 300px;
+            margin-left: 0%;
+        }
+
+        #topoMateusLeft{
+            width: 25%;
+            margin-left: -40px;
+        }
+
+        #topoMateusRight{
+            
+            width: 40%;
+            margin-left:20px;
+            margin-top: -10px;
+            display: flex;
+        }
+        
+
     
      }
 
       /* ******* Media 500px ******* */
 
       @media (max-width: 500px){
-        #nossaEstrutura,body{
+        #bodyMateus,#nossaEstrutura,body{
             background-color:rgb(180, 7, 7);
         }
 
@@ -2133,6 +2230,28 @@ form input:focus::placeholder{
         #horarioLpo img{
             width:80vw;
             margin-top: 50px;
+        }
+
+        
+
+        #topoMateusLeft{
+            width: 25%;
+            margin-left: -30px;
+        }
+
+        #topoMateusRight{
+            width: 60%;
+            margin-left:-20px;
+            margin-top: -10px;
+            display: flex;
+        }
+
+        #topoMateusCenter img{
+            min-width: 300px;
+            height: 110%;
+            border-radius:150px 150px;
+            margin-top: 300px;
+            margin-left: 0%;
         }
 
         
